Fix layout issues

--- a/app/_scss/_curators.scss
+++ b/app/_scss/_curators.scss
@@ -56,12 +56,6 @@ a.symbol:before {
   background-color: $silverColor;
 }
 
-p {
-  font-weight: 300;
-  line-height: 1.36em;
-  font-size: 1.36em;
-}
-
 a, dl dt {
   font-weight: 500;
   &:hover {
@@ -107,20 +101,27 @@ a.social-media-link {
   }
 }
 
+p {
+  font-weight: 300;
+  font-size: emCalc(18px);
+  line-height: 1.36em;
+}
+
 .cc-panel {
     margin-top: 10px;
     margin-bottom: 10px;
-  p {
-    font-weight: 300;
-    font-size: emCalc(18px);
-  }
 }
 
 
 @media #{$medium-only} {
-  .cc-panel p {
+  p {
     font-weight: 300;
     font-size: emCalc(24px);
+  }
+
+  .sample-sunday {
+    height: 300px;
+    margin-bottom: 0;
   }
 
   .menu-link {
@@ -131,7 +132,12 @@ a.social-media-link {
 
 @media #{$large-up} {
 
-  .cc-panel p {
+  .sample-sunday {
+    height: 300px;
+    margin-bottom: 0;
+  }
+
+  p {
     font-weight: 300;
     font-size: emCalc(24px);
   }
@@ -189,6 +195,6 @@ img.cc-logo {
 
 .sample-sunday {
   background-color: $silverColor;
-  height: 300px;
+  margin-bottom: 10px;
   padding: 1em;
 }
